:recycle: 도시데이터 저장 스케줄러 리팩토링[4]
- 기존 문화행사 정보를 모두 삭제하고 다시 저장하는 대신,
  1. 모든 행사에 대해 행사 종료 여부를 판단해 isEnded 필드 값을 갱신한다.
  2. 기존 행사와 이름, 관련 장소(Area)가 동일한 문화행사 정보가 fetch 된 경우,
    - 행사 기간/행사 장소/XY좌표/썸네일/url 값을 변경된 값으로 갱신한다.
    - 위의 5개 필드 중 하나라도 변경되었다면 updateAt 값을 갱신한다.